--- a/01_Air_Quality_EDA.ipynb
+++ b/01_Air_Quality_EDA.ipynb
@@ -13,18 +13,20 @@
     "In this notebook, we will explore some of the available air quality data in New Zealand. The dataset came from [Ministry for the Environment](https://data.mfe.govt.nz/) and can be downloaded [here](https://data.mfe.govt.nz/tables/category/environmental-reporting/air/?q=concentrations&updated_at.after=2021-02-05T02%3A21%3A54.805Z)\n",
     "\n",
     "\n",
-    "The exploratory data analysis (EDA) in this notebook is partly based on code form DeepLearning.AI and consists of the following steps: \n",
+    "The exploratory data analysis (EDA) in this notebook is partly based on code from DeepLearning.AI and consists of the following steps: We will explore various techniques to fill gaps in air quality datasets in this notebook. The workflow comprises the following steps:\n",
     "\n",
-    "1. Import required Python packages and the utils.py (with additional functionality)\n",
-    "2. Load the air quality data (csv) that was previously downloaded and unzipped from MfE servers, do some restructuring of the data set and convert these from DBF into CSV file format\n",
-    "3. Count null values\n",
-    "4. Plot histograms of different pollutants\n",
-    "5. Make boxplots of pollutants at each measurement station\n",
-    "6. Investigate scatterplots of different pollutants and look for correlation\n",
-    "7. Generate simultaneous scatterplots and histograms across all pollutants\n",
-    "8. Construct a correlation matrix to quantitatively look for correlation\n",
-    "9. Look at measurements over time for different pollutants at different stations\n",
-    "10. Visualize the data in a map representation"
+    "1. Import the necessary Python packages and functions from the \"utils.py\" file.\n",
+    "2. Load the data from a CSV file, which corresponds to the final step in the \"01_Air_Quality_EDA\" notebook.\n",
+    "3. Create visualizations to examine the extent and distribution of missing data.\n",
+    "4. Evaluate the nearest neighbor method as an interpolation technique.\n",
+    "5. Preprocess the data to ready it for training a neural network model.\n",
+    "6. Train and test a neural network model to estimate the missing data.\n",
+    "7. Compare the results of the neural network model with a baseline model using visualizations.\n",
+    "8. Estimate the missing sensor measurements for all pollutants.\n",
+    "9. Visualize the outcomes of filling in the missing values.\n",
+    "10. Save the resulting dataset to a new CSV file.\n",
+    "\n",
+    "*Some parts of the code have been taken from a DeepLearning.AI training repository (AI for Good)*"
    ]
   },
   {
@@ -50,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "1038ad5d",
    "metadata": {},
    "outputs": [
@@ -63,19 +65,18 @@
     }
    ],
    "source": [
-    "# Import packages\n",
+    "# Import basic modules\n",
     "import os\n",
     "import zipfile\n",
     "import dbfread\n",
     "import pandas as pd\n",
     "import csv\n",
-    "\n",
     "from datetime import datetime\n",
     "\n",
-    "import utils\n",
-    "\n",
     "# If needed, reload the utils.py (e.g. if any adjustments are made)\n",
-    "import importlib \n",
+    "import importlib\n",
+    "\n",
+    "import utils\n",
     "utils = importlib.reload(utils)\n",
     "\n",
     "print('All packages and functions from utils.py imported successfully')"
@@ -650,7 +651,7 @@
    "source": [
     "## 10. Visualize the air measurement data in a map \n",
     "\n",
-    "Run the next cell to generate a map based on selected pollutanhts across New Zealand, based on the available air measuremnt data. A circle on the map shows each sensor station location. Each circle is colored based on the annual average of a selected pollutant measured at that location. Click on each sensor location to see a plot of the long-term average value and the recommended level of a pollutant. If you change where it says `hour_of_day` to `day_of_week` in the code, you'll see the daily average by day of the week in the plot when you click on each station. You can also change the pollutant to display in the map and the charts by changing the `y_variable` below."
+    "Please execute the following code cell to generate a map visualizing selected pollutants across New Zealand based on the available air measurement data. The map displays circles representing the sensor station locations, with each circle's color indicating the annual average of a chosen pollutant measured at that specific location. By clicking on each sensor location, you can access a plot showing the long-term average value of the pollutant and the recommended level. If you modify the code by replacing `hour_of_day` with `day_of_week`, the plot will show the daily average by day of the week when clicking on each station. Additionally, you can change the pollutant to be displayed on both the map and the charts by modifying the `y_variable` below."
    ]
   },
   {
